[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/states/Game.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/Russo_One.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/states/PauseMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="PauseMenu" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="C" type="CenterContainer" parent="PauseMenu/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="V" type="VBoxContainer" parent="PauseMenu/ColorRect/C"]
margin_left = 260.0
margin_top = 171.0
margin_right = 380.0
margin_bottom = 309.0
custom_constants/separation = 32

[node name="PausedTitle" type="Label" parent="PauseMenu/ColorRect/C/V"]
margin_right = 120.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "Paused"
align = 1

[node name="Buttons" type="VBoxContainer" parent="PauseMenu/ColorRect/C/V"]
margin_left = 11.0
margin_top = 70.0
margin_right = 108.0
margin_bottom = 138.0
size_flags_horizontal = 4

[node name="ResumeButton" type="Button" parent="PauseMenu/ColorRect/C/V/Buttons"]
margin_right = 97.0
margin_bottom = 20.0
text = "Resume"

[node name="RestartButton" type="Button" parent="PauseMenu/ColorRect/C/V/Buttons"]
margin_top = 24.0
margin_right = 97.0
margin_bottom = 44.0
text = "Restart Level"

[node name="ToMenuButton" type="Button" parent="PauseMenu/ColorRect/C/V/Buttons"]
margin_top = 48.0
margin_right = 97.0
margin_bottom = 68.0
text = "Quit to Menu"

[connection signal="pressed" from="PauseMenu/ColorRect/C/V/Buttons/ResumeButton" to="PauseMenu" method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="PauseMenu/ColorRect/C/V/Buttons/RestartButton" to="PauseMenu" method="_on_RestartButton_pressed"]
[connection signal="pressed" from="PauseMenu/ColorRect/C/V/Buttons/ToMenuButton" to="PauseMenu" method="_on_ToMenuButton_pressed"]
